# langchain-projects

./: .env.example  .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt
.github/workflows/: ruff.yml
src/apps/: sentiment_analysis.py  streamlit_chatbot.py
src/apps/chat_multiuser/: app.py  chatbot.py  config.py  memory_manager.py  utils.py
src/apps/cv_analyzer/: app.py
src/apps/helpdesk_system/: app.py  config.py  graph.py  rag_system.py  setup_rag.py
src/apps/legal_assistant_rag/: app.py  prompts.py  rag_system.py  rag_vector_store.py
src/apps/meeting_processor/: app.py  meeting_processor.py  transcriber.py
src/apps/soc_multi_agent/: agents.py  config.py  dashboard.py  supervisor.py  tools.py  webhook_server.py
src/config/: settings.py
src/cv_analyzer/: app.py
src/cv_analyzer/models/: cv_model.py
src/cv_analyzer/prompts/: cv_prompts.py
src/cv_analyzer/services/: cv_evaluator.py  pdf_processor.py
src/cv_analyzer/ui/: streamlit_ui.py
src/examples/: hello_world.py  hello_world_gemini.py  streamlit_chatbot.py
src/examples/01_chats/: hello_world_gemini.py
src/examples/02_templates/: message_placeholders.py  output_parsers.py
src/examples/03_rag/: embedding_langchain.py  google_drive_loader.py  retrievers_langchain.py
src/examples/04_langgraph/: control_flujo.py  hello_langgraph.py
src/examples/05_memory/: fundametos_memoria.py  memoria_persistente_langgraph.py  memoria_simple_langchain.py  memoria_simple_langgraph.py  memoria_vectorial_langgraph.py  memoria_ventana_deslizante.py
src/examples/06_agentes/: agente_langchain.py  agente_langgraph.py  herramientas.py  herramientas_integradas.py  herramientas_personalizadas.py  system_multiagent.py
src/examples/chats/: hello_world.py  hello_world_avanzado.py
src/examples/core/: chat_prompt_template.py
src/examples/rag/: document_loaders.py  google_drive_loader.py  multi_retrievers_langchain.py  text_splitters.py  vector_store.py
src/examples/templates/: chat_prompt_template.py  runnables.py  (+3 more)
(+5 files in other folders)
